[package]
name = "mdk-memory-storage"
version = "0.5.1"
edition = "2024"
description = "In-memory database for nostr-mls that implements the MdkStorageProvider Trait"
authors = ["Jeff Gardner <j@jeffg.me>", "Yuki Kishimoto <yukikishimoto@protonmail.com>", "MDK Developers"]
homepage.workspace = true
repository.workspace = true
license.workspace = true
readme = "README.md"
rust-version = "1.90.0"
keywords = ["nostr", "mls", "openmls", "memory"]

[features]
default = []
wasm = []

[dependencies]
lru.workspace = true
mdk-storage-traits.workspace = true
nostr = { workspace = true, features = ["std"] }
openmls.workspace = true
openmls_memory_storage.workspace = true

# Native-only: parking_lot for high-performance locking
[target.'cfg(not(all(target_arch = "wasm32", target_os = "unknown")))'.dependencies]
parking_lot.workspace = true

[dev-dependencies]
mdk-storage-traits = { workspace = true, features = ["test-utils"] }
